[package]
name = "http-rs"
version = "0.1.0"
edition = "2024"
authors = ["Tukan van der Borgh <tukan@orangebandits.com>"]

[dependencies]
anyhow = "1.0.99"
bytes = "1.7.0"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12.26", features = ["blocking"] }
